Fixed Loading z-index

--- a/packages/vuesax/src/functions/vsLoading/Base/style.sass
+++ b/packages/vuesax/src/functions/vsLoading/Base/style.sass
@@ -16,7 +16,7 @@
   left: 0px
   width: 100%
   height: 100%
-  z-index: 100000
+  z-index: 1000
   display: flex
   align-items: center
   justify-content: center
